--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             height: 100%;
         }
         aside {
-            width: 250px;
+            min-width: 250px;
             background: #f4f4f4;
             padding: 20px;
             overflow-y: auto;
